--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,15 +44,15 @@ spring:
     gateway:
       routes:
         - id: order
-          uri: http://order:8080
+          uri: http://user15-order:8080
           predicates:
             - Path=/orders/** 
         - id: delivery
-          uri: http://delivery:8080
+          uri: http://user15-delivery:8080
           predicates:
             - Path=/deliveries/** 
         - id: product
-          uri: http://product:8080
+          uri: http://user15-product:8080
           predicates:
             - Path=/inventories/** 
         - id: frontend
